// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./ProgressBar.stories AlmostComplete 1`] = `
<div
  class="MuiBox-root css-1v5z18m"
>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="85"
    class="MuiLinearProgress-root MuiLinearProgress-colorSecondary MuiLinearProgress-determinate progressBar css-1iizkxc-MuiLinearProgress-root"
    role="progressbar"
  >
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate css-3vqet8-MuiLinearProgress-bar1"
      style="transform: translateX(-15%);"
    />
  </span>
</div>
`;

exports[`./ProgressBar.stories Complete 1`] = `
<div
  class="MuiBox-root css-1v5z18m"
>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    class="MuiLinearProgress-root MuiLinearProgress-colorSecondary MuiLinearProgress-determinate progressBar css-1iizkxc-MuiLinearProgress-root"
    role="progressbar"
  >
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate css-3vqet8-MuiLinearProgress-bar1"
      style="transform: translateX(0%);"
    />
  </span>
</div>
`;

exports[`./ProgressBar.stories Empty 1`] = `
<div
  class="MuiBox-root css-1v5z18m"
>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="MuiLinearProgress-root MuiLinearProgress-colorSecondary MuiLinearProgress-determinate progressBar css-1iizkxc-MuiLinearProgress-root"
    role="progressbar"
  >
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate css-3vqet8-MuiLinearProgress-bar1"
      style="transform: translateX(-100%);"
    />
  </span>
</div>
`;

exports[`./ProgressBar.stories Partial 1`] = `
<div
  class="MuiBox-root css-1v5z18m"
>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="45"
    class="MuiLinearProgress-root MuiLinearProgress-colorSecondary MuiLinearProgress-determinate progressBar css-1iizkxc-MuiLinearProgress-root"
    role="progressbar"
  >
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate css-3vqet8-MuiLinearProgress-bar1"
      style="transform: translateX(-55%);"
    />
  </span>
</div>
`;
